--- a/InventorySystem.Web/Views/Assets/Edit.cshtml
+++ b/InventorySystem.Web/Views/Assets/Edit.cshtml
@@ -1,7 +1,23 @@
-@model InventorySystem.Web.Models.AssetFormViewModel
+@using Microsoft.AspNetCore.Mvc.Rendering
+@model InventorySystem.Web.Controllers.AssetsController.AssetEditVM
 
 @{
     ViewData["Title"] = "Editar equipo";
+
+    var typeItems = new SelectList(Model.Types ?? Enumerable.Empty<InventorySystem.Web.Data.Entities.AssetType>(),
+                                   "AssetTypeId", "Name", Model.AssetTypeId);
+
+    var brandItems = new SelectList(Model.Brands ?? Enumerable.Empty<InventorySystem.Web.Data.Entities.Brand>(),
+                                    "BrandId", "Name", Model.BrandId);
+
+    var locationItems = new SelectList(Model.Locations ?? Enumerable.Empty<InventorySystem.Web.Data.Entities.Location>(),
+                                       "LocationId", "Name", Model.LocationId);
+
+    var win11Items = new SelectList(Model.Win11Statuses ?? Enumerable.Empty<InventorySystem.Web.Data.Entities.Win11Status>(),
+                                    "Win11StatusId", "Name", Model.Win11StatusId);
+
+    var statusItems = new SelectList(Model.Statuses ?? Enumerable.Empty<InventorySystem.Web.Data.Entities.EquipmentStatus>(),
+                                     "EqStatusId", "Name", Model.EqStatusId);
 }
 
 <div class="container mt-4">
@@ -9,7 +25,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form asp-action="Edit" method="post">
+            <form asp-action="Edit" asp-route-id="@Model.AssetId" method="post">
                 <input type="hidden" asp-for="AssetId" />
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -23,8 +39,7 @@
 
                     <div class="col-md-4">
                         <label asp-for="AssetTypeId" class="form-label"></label>
-                        <select asp-for="AssetTypeId" class="form-select"
-                                asp-items="Model.AssetTypes">
+                        <select asp-for="AssetTypeId" class="form-select" asp-items="typeItems">
                             <option value="">-- Selecciona --</option>
                         </select>
                         <span asp-validation-for="AssetTypeId" class="text-danger"></span>
@@ -32,8 +47,7 @@
 
                     <div class="col-md-4">
                         <label asp-for="BrandId" class="form-label"></label>
-                        <select asp-for="BrandId" class="form-select"
-                                asp-items="Model.Brands">
+                        <select asp-for="BrandId" class="form-select" asp-items="brandItems">
                             <option value="">-- Selecciona --</option>
                         </select>
                         <span asp-validation-for="BrandId" class="text-danger"></span>
@@ -55,8 +69,7 @@
 
                     <div class="col-md-4">
                         <label asp-for="LocationId" class="form-label"></label>
-                        <select asp-for="LocationId" class="form-select"
-                                asp-items="Model.Locations">
+                        <select asp-for="LocationId" class="form-select" asp-items="locationItems">
                             <option value="">-- Selecciona --</option>
                         </select>
                         <span asp-validation-for="LocationId" class="text-danger"></span>
@@ -72,11 +85,18 @@
 
                     <div class="col-md-4">
                         <label asp-for="Win11StatusId" class="form-label"></label>
-                        <select asp-for="Win11StatusId" class="form-select"
-                                asp-items="Model.Win11Statuses">
+                        <select asp-for="Win11StatusId" class="form-select" asp-items="win11Items">
                             <option value="">-- Selecciona --</option>
                         </select>
                         <span asp-validation-for="Win11StatusId" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-md-4">
+                        <label asp-for="EqStatusId" class="form-label"></label>
+                        <select asp-for="EqStatusId" class="form-select" asp-items="statusItems">
+                            <option value="">-- Selecciona --</option>
+                        </select>
+                        <span asp-validation-for="EqStatusId" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -87,12 +107,8 @@
                 </div>
 
                 <div class="d-flex justify-content-between">
-                    <a asp-action="Index" class="btn btn-outline-secondary">
-                        Volver al listado
-                    </a>
-                    <button type="submit" class="btn btn-primary">
-                        Guardar cambios
-                    </button>
+                    <a asp-action="Index" class="btn btn-outline-secondary">Volver al listado</a>
+                    <button type="submit" class="btn btn-primary">Guardar cambios</button>
                 </div>
             </form>
         </div>
